@@ -14,6 +14,7 @@
  ! RMAPS: Error "failed to retrieve max tile zoom info" fixed (#3561323)
  ! GEMF: Error "NullPointerException" fixed (#3564146)
  ~ OruxMaps: Patch #3300055 applied
+ + Custom XML map: <invertYCoordinate> now works in simple XML map, too 
 
 1.9.8 (2012-07-05)
  ! Viewranger atlas format depends on Java Advanced Imaging without checking
